stat report done after review done

--- a/project.ipynb
+++ b/project.ipynb
@@ -916,10 +916,8 @@
     }
    ],
    "source": [
-    "\n",
-    "mlr_model <- lm(Price ~ . , data = d)\n",
-    "\n",
-    "mlr_model$coefficients"
+    "#fit the full model\n",
+    "mlr_model <- lm(Price ~ . , data = d)"
    ]
   },
   {
@@ -982,11 +980,6 @@
    "source": [
     "summary(mlr_model)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1273,102 +1266,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'Rooms'</li><li>'Price'</li><li>'Distance'</li><li>'Postcode'</li><li>'Bedroom2'</li><li>'Bathroom'</li><li>'Car'</li><li>'Landsize'</li><li>'BuildingArea'</li><li>'Lattitude'</li><li>'Longtitude'</li><li>'Propertycount'</li><li>'year'</li><li>'RegionnameEasternMetropolitan'</li><li>'RegionnameEasternVictoria'</li><li>'RegionnameNorthernMetropolitan'</li><li>'RegionnameNorthernVictoria'</li><li>'RegionnameSouthEasternMetropolitan'</li><li>'RegionnameSouthernMetropolitan'</li><li>'RegionnameWesternMetropolitan'</li><li>'RegionnameWesternVictoria'</li><li>'Typeh'</li><li>'Typet'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'Rooms'\n",
-       "\\item 'Price'\n",
-       "\\item 'Distance'\n",
-       "\\item 'Postcode'\n",
-       "\\item 'Bedroom2'\n",
-       "\\item 'Bathroom'\n",
-       "\\item 'Car'\n",
-       "\\item 'Landsize'\n",
-       "\\item 'BuildingArea'\n",
-       "\\item 'Lattitude'\n",
-       "\\item 'Longtitude'\n",
-       "\\item 'Propertycount'\n",
-       "\\item 'year'\n",
-       "\\item 'RegionnameEasternMetropolitan'\n",
-       "\\item 'RegionnameEasternVictoria'\n",
-       "\\item 'RegionnameNorthernMetropolitan'\n",
-       "\\item 'RegionnameNorthernVictoria'\n",
-       "\\item 'RegionnameSouthEasternMetropolitan'\n",
-       "\\item 'RegionnameSouthernMetropolitan'\n",
-       "\\item 'RegionnameWesternMetropolitan'\n",
-       "\\item 'RegionnameWesternVictoria'\n",
-       "\\item 'Typeh'\n",
-       "\\item 'Typet'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'Rooms'\n",
-       "2. 'Price'\n",
-       "3. 'Distance'\n",
-       "4. 'Postcode'\n",
-       "5. 'Bedroom2'\n",
-       "6. 'Bathroom'\n",
-       "7. 'Car'\n",
-       "8. 'Landsize'\n",
-       "9. 'BuildingArea'\n",
-       "10. 'Lattitude'\n",
-       "11. 'Longtitude'\n",
-       "12. 'Propertycount'\n",
-       "13. 'year'\n",
-       "14. 'RegionnameEasternMetropolitan'\n",
-       "15. 'RegionnameEasternVictoria'\n",
-       "16. 'RegionnameNorthernMetropolitan'\n",
-       "17. 'RegionnameNorthernVictoria'\n",
-       "18. 'RegionnameSouthEasternMetropolitan'\n",
-       "19. 'RegionnameSouthernMetropolitan'\n",
-       "20. 'RegionnameWesternMetropolitan'\n",
-       "21. 'RegionnameWesternVictoria'\n",
-       "22. 'Typeh'\n",
-       "23. 'Typet'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"Rooms\"                              \"Price\"                             \n",
-       " [3] \"Distance\"                           \"Postcode\"                          \n",
-       " [5] \"Bedroom2\"                           \"Bathroom\"                          \n",
-       " [7] \"Car\"                                \"Landsize\"                          \n",
-       " [9] \"BuildingArea\"                       \"Lattitude\"                         \n",
-       "[11] \"Longtitude\"                         \"Propertycount\"                     \n",
-       "[13] \"year\"                               \"RegionnameEasternMetropolitan\"     \n",
-       "[15] \"RegionnameEasternVictoria\"          \"RegionnameNorthernMetropolitan\"    \n",
-       "[17] \"RegionnameNorthernVictoria\"         \"RegionnameSouthEasternMetropolitan\"\n",
-       "[19] \"RegionnameSouthernMetropolitan\"     \"RegionnameWesternMetropolitan\"     \n",
-       "[21] \"RegionnameWesternVictoria\"          \"Typeh\"                             \n",
-       "[23] \"Typet\"                             "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "names(d)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
@@ -1470,7 +1367,7 @@
     "      sse <- sum((Y - y_hat)^2)\n",
     "      \n",
     "      if (sse < low_sse) {  \n",
-    "        low_sse <- sse  # Corrected variable name here\n",
+    "        low_sse <- sse  \n",
     "        best_feature <- feature\n",
     "      }\n",
     "    }\n",
@@ -1489,102 +1386,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'Rooms'</li><li>'Price'</li><li>'Distance'</li><li>'Postcode'</li><li>'Bedroom2'</li><li>'Bathroom'</li><li>'Car'</li><li>'Landsize'</li><li>'BuildingArea'</li><li>'Lattitude'</li><li>'Longtitude'</li><li>'Propertycount'</li><li>'year'</li><li>'RegionnameEasternMetropolitan'</li><li>'RegionnameEasternVictoria'</li><li>'RegionnameNorthernMetropolitan'</li><li>'RegionnameNorthernVictoria'</li><li>'RegionnameSouthEasternMetropolitan'</li><li>'RegionnameSouthernMetropolitan'</li><li>'RegionnameWesternMetropolitan'</li><li>'RegionnameWesternVictoria'</li><li>'Typeh'</li><li>'Typet'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'Rooms'\n",
-       "\\item 'Price'\n",
-       "\\item 'Distance'\n",
-       "\\item 'Postcode'\n",
-       "\\item 'Bedroom2'\n",
-       "\\item 'Bathroom'\n",
-       "\\item 'Car'\n",
-       "\\item 'Landsize'\n",
-       "\\item 'BuildingArea'\n",
-       "\\item 'Lattitude'\n",
-       "\\item 'Longtitude'\n",
-       "\\item 'Propertycount'\n",
-       "\\item 'year'\n",
-       "\\item 'RegionnameEasternMetropolitan'\n",
-       "\\item 'RegionnameEasternVictoria'\n",
-       "\\item 'RegionnameNorthernMetropolitan'\n",
-       "\\item 'RegionnameNorthernVictoria'\n",
-       "\\item 'RegionnameSouthEasternMetropolitan'\n",
-       "\\item 'RegionnameSouthernMetropolitan'\n",
-       "\\item 'RegionnameWesternMetropolitan'\n",
-       "\\item 'RegionnameWesternVictoria'\n",
-       "\\item 'Typeh'\n",
-       "\\item 'Typet'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'Rooms'\n",
-       "2. 'Price'\n",
-       "3. 'Distance'\n",
-       "4. 'Postcode'\n",
-       "5. 'Bedroom2'\n",
-       "6. 'Bathroom'\n",
-       "7. 'Car'\n",
-       "8. 'Landsize'\n",
-       "9. 'BuildingArea'\n",
-       "10. 'Lattitude'\n",
-       "11. 'Longtitude'\n",
-       "12. 'Propertycount'\n",
-       "13. 'year'\n",
-       "14. 'RegionnameEasternMetropolitan'\n",
-       "15. 'RegionnameEasternVictoria'\n",
-       "16. 'RegionnameNorthernMetropolitan'\n",
-       "17. 'RegionnameNorthernVictoria'\n",
-       "18. 'RegionnameSouthEasternMetropolitan'\n",
-       "19. 'RegionnameSouthernMetropolitan'\n",
-       "20. 'RegionnameWesternMetropolitan'\n",
-       "21. 'RegionnameWesternVictoria'\n",
-       "22. 'Typeh'\n",
-       "23. 'Typet'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"Rooms\"                              \"Price\"                             \n",
-       " [3] \"Distance\"                           \"Postcode\"                          \n",
-       " [5] \"Bedroom2\"                           \"Bathroom\"                          \n",
-       " [7] \"Car\"                                \"Landsize\"                          \n",
-       " [9] \"BuildingArea\"                       \"Lattitude\"                         \n",
-       "[11] \"Longtitude\"                         \"Propertycount\"                     \n",
-       "[13] \"year\"                               \"RegionnameEasternMetropolitan\"     \n",
-       "[15] \"RegionnameEasternVictoria\"          \"RegionnameNorthernMetropolitan\"    \n",
-       "[17] \"RegionnameNorthernVictoria\"         \"RegionnameSouthEasternMetropolitan\"\n",
-       "[19] \"RegionnameSouthernMetropolitan\"     \"RegionnameWesternMetropolitan\"     \n",
-       "[21] \"RegionnameWesternVictoria\"          \"Typeh\"                             \n",
-       "[23] \"Typet\"                             "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "names(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 181,
    "metadata": {
     "vscode": {
@@ -1593,9 +1394,9 @@
    },
    "outputs": [],
    "source": [
+    "#adjusted model\n",
     "mlr_new_model <- lm(Price ~  Rooms+RegionnameSouthernMetropolitan+Distance+Typeh+Longtitude+Bathroom+RegionnameNorthernMetropolitan + Typet+ BuildingArea+Car, data = d)\n",
-    "\n",
-    "# mlr_model$coefficients"
+    "\n"
    ]
   },
   {
@@ -1682,6 +1483,7 @@
     }
    ],
    "source": [
+    "#df for residual analysis\n",
     "diag_1 = data.frame(yhat = fitted(mlr_model), r = resid(mlr_model,type = \"pearson\"), y = d$Price,\n",
     "                           Rooms = d$Rooms, Distance =  d$Distance , Longtitude = d$Longtitude , Lattitude = d$Lattitude , BuildingArea = d$BuildingArea , Car = d$Car , Bathroom = d$Bathroom)\n",
     "\n",
@@ -1698,9 +1500,13 @@
     }
    },
    "source": [
+    "\n",
+    "\n",
     "Constant Variance - The variance is the constant across the overall data.\n",
     "\n",
-    "Normality - It can be inferred from the QQ Plot that data follows a Normal Distribution\n"
+    "Normality - It can be inferred from the QQ Plot that data follows a Normal Distribution but we can see at both ends there is slight deviation.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1750,7 +1556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Linearity - The above plot shows that the model captures most of variance but it overpredicts and underpredicts in both tails."
+    "Linearity - The above plot shows that the model captures most of variance but it overpredicts and underpredicts in both tails, which seem to violate the linearity assumption."
    ]
   },
   {
