--- a/project.ipynb
+++ b/project.ipynb
@@ -541,6 +541,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Types of houses in Autralia \n",
     "\n",
     "\n",
@@ -726,7 +733,7 @@
    "source": [
     "## 2. Confidence Interval\n",
     "\n",
-    "It can be found using the confidence interval method in which the range of the population parameters likely to be present based on the confidence and the margin of error in the data. It is very helpful in inferential statistics by providing the uncertainity in the population parameters helping in decision making process.\n",
+    "It can be found using the confidence interval method in which the range of the population parameters likely to be present based on the confidence and the margin of error in the data. It is very helpful in inferential statistics by providing the width of population parameters helping in decision making process.\n",
     "\n",
     "\n",
     "**Finding the mean sale price of the houses in Australia, assuming this data as the sample using the confidence interval based on the charateristics of sample data and confidence level (95%).** \n",
@@ -805,7 +812,7 @@
     }
    },
    "source": [
-    "Regression modelling invovlee in finding the mathematical relationship between the independent variables and the dependent variables, they mostly used to predict the dependent variables based on the change of independent variables.\n",
+    "Regression modelling involve in finding the mathematical relationship between the independent variables and the dependent variables, they mostly used to predict the dependent variables based on the change of independent variables.\n",
     "\n",
     "**Predicting the price of the residential property based on the independent features like the numbers of rooms, distance from the CBD, number of bedrooms, number of bathrooms, number of cars, the landsize, building area, number of property in the community and the location metrics.**\n",
     "\n"
