--- a/project.ipynb
+++ b/project.ipynb
@@ -1635,7 +1635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Report"
+    "# Report"
    ]
   },
   {
@@ -1800,10 +1800,20 @@
     "\n",
     "### 3.  Conclusion:\n",
     "\n",
-    "From this analysis, we got some great insight about the australian housing market, which is the higher contributor to the nation's GDP. Right from the estimation of the average sale price of an property in The Australia to ensuring the violation of linear modeling. \n",
+    "From this analysis, we got some great insight about the australian housing market, which is the higher contributor to the nation's GDP. Right from the estimation of the average sale price of an property in The Australia to ensuring the violation of linear modeling. By helping us find the answers to the research questions, based on the results of hypothesis testing, it clear that the average distance from the central business district of the Australia is not 6.87 kms. \n",
+    "\n",
+    "With confidence interval, the width of mean sale price of residential properties in the Australia are found using the sample data. The values range from 1127405 to 1167025.\n",
+    "\n",
+    "An linear model is fitted, to estimate the sale price of the residential properties using the predictors like number of rooms, building area, number of bathrooms etc. Also the F-test, showed the evidence that atleast one feature is contributing towards the prediction of the sale price from the model. Moreover, the residual analysis gave a deeper insights about the model and the data.\n",
+    "\n",
     "\n",
     "Next, we can proceed on the model selection process, using the AIC, BIC and Adjusted R^2 to select the best model based on the combination of all predictors contributing to the prediciton of the target variable with less error."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
